# ChangeLog for x11-terms/aterm
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/aterm/ChangeLog,v 1.108 2008/05/05 13:45:41 ranger Exp $

  05 May 2008; Brent Baude <ranger@gentoo.org> aterm-1.0.1-r1.ebuild:
  Marking aterm-1.0.1-r1 ppc for bug 219746

  05 May 2008; Markus Rothe <corsair@gentoo.org> aterm-1.0.1-r1.ebuild:
  Stable on ppc64; bug #219746

  05 May 2008; Jeroen Roovers <jer@gentoo.org> aterm-1.0.1-r1.ebuild:
  Stable for HPPA (bug #219746).

  04 May 2008; Markus Meier <maekke@gentoo.org> aterm-1.0.1-r1.ebuild:
  amd64 stable, security bug #219746

  04 May 2008; Raúl Porcel <armin76@gentoo.org> aterm-1.0.1-r1.ebuild:
  alpha/ia64/sparc stable wrt security #219476

  03 May 2008; Christian Faulhammer <opfer@gentoo.org>
  aterm-1.0.1-r1.ebuild:
  stable x86, security bug 219746

  03 May 2008; Christian Faulhammer <opfer@gentoo.org>
  aterm-1.0.1-r1.ebuild:
  remove doc/BUGS from doc installation

*aterm-1.0.1-r1 (03 May 2008)

  03 May 2008; Tobias Heinlein <keytoaster@gentoo.org>
  +files/aterm-1.0.1-display-security-issue.patch, +aterm-1.0.1-r1.ebuild:
  Adding patch to fix security bug #219746

  27 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  -files/aterm-0.4.2-borderless.patch, -files/aterm-0.4.2-copynpaste.patch,
  -files/aterm-0.4.2-copynpaste-r2.patch,
  -files/aterm-0.4.2-copynpaste-r3.patch,
  -files/aterm-0.4.2-internal-border.patch,
  -files/aterm-0.4.2-ja-savelines.patch, -files/aterm-0.4.2-paste.patch,
  -files/aterm-0.4.2-paste_mouse_outside.patch,
  -files/aterm-0.4.2-patch-pack000.patch, -files/aterm-0.4.2-qtpaste.patch,
  -files/aterm-0.4.2-savelines.patch,
  -files/aterm-0.4.2-scroll-double-free.patch,
  -files/aterm-1.00-beta2-bgfix.patch, -aterm-0.4.2-r9.ebuild,
  -aterm-0.4.2-r11.ebuild, -aterm-0.4.2-r13.ebuild, -aterm-1.0.0.ebuild,
  -aterm-1.0.0-r1.ebuild, aterm-1.0.1.ebuild:
  alpha/ia64 stable, remove old
