@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/aterm/aterm-1.0.1-r1.ebuild,v 1.9 2008/05/05 13:45:41 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/aterm/aterm-1.0.1-r1.ebuild,v 1.10 2008/06/06 03:28:03 darkside Exp $
 
 EAPI="prefix"
 
@@ -12,7 +12,7 @@ SRC_URI="ftp://ftp.afterstep.org/apps/${PN}/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86-interix ~amd64-linux ~mips-linux ~x86-linux ~ppc-macos ~sparc-solaris"
+KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris"
 IUSE="background cjk xgetdefault"
 
 RDEPEND="media-libs/jpeg
@@ -80,8 +80,9 @@ src_install() {
 
 pkg_postinst() {
 	echo
-	ewarn "The transparent background will only work if you have the 'real' root wallpaper"
-	ewarn "set. Use Esetroot (x11-terms/eterm) or fbsetbg (x11-wm/fluxbox) if you are"
-	ewarn "experiencing problems with transparency in aterm."
+	ewarn "The transparent background will only work if you have the 'real'"
+	ewarn "root wallpaper set. Some tools that might help include: Esetroot"
+	ewarn "(x11-terms/eterm), wmsetbg (x11-wm/windowmaker), and/or"
+	ewarn "media-gfx/feh."
 	echo
 }
